Escape some characters so that <<WidgetViewSync>> displays properly in the html

--- a/tip/438.md
+++ b/tip/438.md
@@ -66,7 +66,7 @@ It is proposed to add two new commands to the text widget:
 
  > _pathName_ **pendingsync**
 
-Also a new virtual event **<<WidgetViewSync>>** will be added.
+Also a new virtual event **\<\<WidgetViewSync\>\>** will be added.
 
 Description:
 
@@ -95,7 +95,7 @@ _pathName_ **pendingsync**
 
     Returns 1 if the line calculations are not up-to-date, 0 otherwise.
 
-**<<WidgetViewSync>>**
+**\<\<WidgetViewSync\>\>**
 
     A widget can have a period of time during which the internal data model is
     not in sync with the view. The **sync** method forces the view to be in
@@ -108,10 +108,10 @@ _pathName_ **pendingsync**
     field \(%d substitution\) is either true \(when the widget is in sync\) or
     false \(when it is not\).
 
-All **sync**, **pendingsync** and **<<WidgetViewSync>>** apply to
+All **sync**, **pendingsync** and **\<\<WidgetViewSync\>\>** apply to
 each text widget independently of its peers.
 
-The names **sync**, **pendingsync** and **<<WidgetViewSync>>** are chosen
+The names **sync**, **pendingsync** and **\<\<WidgetViewSync\>\>** are chosen
 because of the potential for generalization to other widgets they have.
 
 The text widget documentation will be augmented by a short section describing
@@ -234,7 +234,7 @@ or **.text yview moveto** are as in the following example:
    that path.
 
  * It has been proposed that the detail field %d for the
-   **<<WidgetViewSync>>** event contain the number of outdated lines, while
+   **\<\<WidgetViewSync\>\>** event contain the number of outdated lines, while
    this event would fire at each [after 1] partial update of the line metrics.
    This was rejected since no use case of this value could be exhibited, and it
    was believed that firing the event twice \(when out of sync and when again in
