--- a/tip/498.md
+++ b/tip/498.md
@@ -83,7 +83,7 @@ when a command is replaced, producing "called Tcl_CreateHashEntry on deleted
 table"](https://core.tcl.tk/tcl/info/0e4d88b650).
 
 `activationCount` is removed from the `Namespace` structure, slightly reducing
-is size.  See also, [Improve average size of
+its size.  See also, [Improve average size of
 Namespace](https://core.tcl.tk/tcl/tktview?name=2694630fff).
 
 `NS_KILLED` will no longer be needed.  A namespace being deleted is either
