Editorial fixes in TIP #532 (not finished - numbering still not fully OK)

--- a/tip/532.md
+++ b/tip/532.md
@@ -32,7 +32,7 @@ The following problems, caused by event ring overflow, have been solved:
 1. Sometimes double-clicks with mouse will not be detected, nothing happens although this
 event is bound (see test case
 [bind-32.2](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6123-6143)).
-This problem occurs often in applications[Scidb](http://scidb.sourceforge.net),
+This problem occurs often in application [Scidb](http://scidb.sourceforge.net),
 because this application is using tooltips heavily, causing a lot of intervening
 expose events.
 
@@ -48,26 +48,26 @@ This has been observed in applications [Scid](http://scid.sourceforge.net), and
 
 Moreover the following issues have been solved:
 
-4. It's possible to bind an event like `\<Quadruple-1\>`, but it's nearly impossible to
+4. It's possible to bind an event like <code>\<Quadruple-1\></code>, but it's nearly impossible to
 trigger this event (with mousepad). Even a triple-click is not so easy. This behavior is
 user-unfriendly, and it seems that it is caused by an erroneous implementation.
 
-5. If a statement like `event generate . \<1\>` is executed, and after some time
-(\> 500 ms) this statement is executed again, then it's likeky that a double-click event
+5. If a statement like <code>event generate . \<1\></code> is executed, and after some time
+(\> 500 ms) this statement is executed again, then it's likely that a double-click event
 will be triggered, even if a single-click event is expected, because the triggering
 of double-click events has to fit time requirements (due to manual; see test case
 [bind-32.4](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6158-6171)).
 
-6. `event generate . \<FocusIn\> -sendevent 1` is not working, the argument of
-`sendevent` get lost (test case
+6. <code>event generate . \<FocusIn\> -sendevent 1</code> is not working, the argument of
+<code>sendevent</code> get lost (test case
 [bind-32.6](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6192-6204)).
 
 7. See following code:
 
-		bind . \<Double-1\> { lappend x "Double" }  
-		bind . \<1\>\<1\> { lappend x "11" }  
-		event generate . \<1\> -x 0 -y 0 -time 0  
-		event generate . \<1\> -x 0 -y 0 -time 0
+		bind . <Double-1> { lappend x "Double" }  
+		bind . <1><1> { lappend x "11" }  
+		event generate . <1> -x 0 -y 0 -time 0  
+		event generate . <1> -x 0 -y 0 -time 0
 		set x
 
 	This gives the result `11`, but `Double` is expected, because the time (and space)
@@ -79,9 +79,9 @@ of double-click events has to fit time requirements (due to manual; see test cas
 	> same tag, then the most specific binding is chosen and its script is
 	> evaluated.
 
-	And the sequence `\<Double-1\>` is more specific than `\<1\>\<1\>` because of time and
-	space requirements (in `\<Double-1\>`). Note that constant `PREFER_MOST_SPECIALIZED_EVENT=1`
-	has to set when compiling to enable this new feature.
+	And the sequence <code>\<Double-1\></code> is more specific than <code>\<1\>\<1\></code> because of time and
+	space requirements (in <code>\<Double-1\></code>). Note that constant `PREFER_MOST_SPECIALIZED_EVENT=1`
+	has to be set when compiling to enable this new feature.
 
 8. Legacy implementation cannot handle homogeneous equal sequences properly, see this script:
 
@@ -96,7 +96,7 @@ of double-click events has to fit time requirements (due to manual; see test cas
 	> If these tests fail to determine a winner, then the most recently registered
 	> sequence is the winner.
 
-	In this script there is no winner, so the latter defined one has to be chosen, and
+	In this script there is no winner, so the later defined one has to be chosen, and
 	revised implementation is doing this.
 
 Legacy code also suffers from causing memory holes, revised implementation is tested
@@ -106,17 +106,19 @@ The revised implementation supports an additional syntax for binding motion even
 (if constant `SUPPORT_ADDITIONAL_MOTION_SYNTAX=1` is set when compiling). E.g.,
 the following bindings
 
-	bind . \<B2-Motion\> { ... }  
-	bind . \<B1-B2-Motion\> { ... }
+	bind . <B2-Motion> { ... }  
+	bind . <B1-B2-Motion> { ... }
 
 can be expressed in a different way:
 
-  	bind . \<Motion-2\> { ... }  
-  	bind . \<Motion-1-2\> { ... }
+<code>
+  	bind . \<Motion-2> { ... }  
+  	bind . \<Motion-1-2> { ... }
+</code>
 
 The additional syntax is easier to remember, because button press/release events will also
-be expressed in the latter form, for example `bind . \<ButtonPress-1\>`. The former
-syntax (`\<B2-Motion\>`) form will still be supported.
+be expressed in the latter form, for example <code>bind . \<ButtonPress-1></code>. The former
+syntax (<code>\<B2-Motion></code>) form will still be supported.
 
 # Specification
 
@@ -124,9 +126,9 @@ The whole handling in file `general/tkBind.c` has been re-implemented. This impl
 is passing all test cases in `tests/bind.test`. Note that legacy implementation is failing
 in some (of the new) test cases.
 
-Case (4): Legacy implementation is computing the time difference of nth click with fst click,
+Case (4): Legacy implementation is computing the time difference of nth click with first click,
 and tests whether it is less than 500 ms. But this seems to be an implementation bug. Revised
-implementation computes the difference of nth and (n+1)th click. This behavior also conforms
+implementation computes the difference of nth and (n+1)th clicks. This behavior also conforms
 better to the behavior of other toolkits. With new implementation the use of quadruple clicks
 (and triple clicks) is unproblematic. See also test case
 [bind-32.6](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6172-6191).
@@ -143,7 +145,7 @@ For the fix of case (6) the author decided that non-zero values (given with opti
 [generic/tkBind.c](http://core.tcl.tk/tk/artifact/e41f45f7f6ac3447?ln=4178-4203).
 
 The fix of (7) is not fully backwards compatible. But in the author's opinion this is not
-a real problem, nobody is using sequences like `\<1\>\<1\>`, it is not expected that
+a real problem, nobody is using sequences like <code>\<1\>\<1\></code>, it is not expected that
 applications have to be adjusted.
 
 Fix of (8) is correcting a major bug, see test case
