One more editorial fix

--- a/tip/532.md
+++ b/tip/532.md
@@ -159,7 +159,7 @@ branch of the core Tcl repository.
 
 The event ring has been removed. Revised implementation is working with promoted
 event bindings, and remembers the latest event per event type. This technique works
-as if we have an inifinite event ring, so no overflow is possible.
+as if we have an infinite event ring, so no overflow is possible.
 
 Based on tests the performance in time is better than with legacy implementation. This
 result is expected, because a triple-nested loop, executed for each incoming event, has
