--- a/tip/532.md
+++ b/tip/532.md
@@ -48,21 +48,21 @@ This has been observed in applications [Scid](http://scid.sourceforge.net), and
 
 Moreover the following issues have been solved:
 
-4. It's possible to bind an event like <code>\<Quadruple-1\></code>, but it's nearly impossible to
+1. It's possible to bind an event like <code>\<Quadruple-1\></code>, but it's nearly impossible to
 trigger this event (with mousepad). Even a triple-click is not so easy. This behavior is
 user-unfriendly, and it seems that it is caused by an erroneous implementation.
 
-5. If a statement like <code>event generate . \<1\></code> is executed, and after some time
+2. If a statement like <code>event generate . \<1\></code> is executed, and after some time
 (\> 500 ms) this statement is executed again, then it's likely that a double-click event
 will be triggered, even if a single-click event is expected, because the triggering
 of double-click events has to fit time requirements (due to manual; see test case
 [bind-32.4](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6158-6171)).
 
-6. <code>event generate . \<FocusIn\> -sendevent 1</code> is not working, the argument of
+3. <code>event generate . \<FocusIn\> -sendevent 1</code> is not working, the argument of
 <code>sendevent</code> get lost (test case
 [bind-32.6](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6192-6204)).
 
-7. See following code:
+4. See following code:
 
 		bind . <Double-1> { lappend x "Double" }  
 		bind . <1><1> { lappend x "11" }  
@@ -70,20 +70,20 @@ of double-click events has to fit time requirements (due to manual; see test cas
 		event generate . <1> -x 0 -y 0 -time 0
 		set x
 
-	This gives the result `11`, but `Double` is expected, because the time (and space)
-	constraints for a double click are fulfilled. With other words, the legacy implementation
-	is not preferring the most specialized event. But it should, because the manual says
-	(`man bind`):
+	This gives the result <code>11</code>, but <code>Double</code> is expected, because the time
+	(and space) constraints for a double click are fulfilled. With other words, the legacy
+	implementation is not preferring the most specialized event. But it should, because the manual
+	says (<code>man bind</code>):
 
 	> If more than one binding matches a particular event and they have the
 	> same tag, then the most specific binding is chosen and its script is
 	> evaluated.
 
-	And the sequence <code>\<Double-1\></code> is more specific than <code>\<1\>\<1\></code> because of time and
-	space requirements (in <code>\<Double-1\></code>). Note that constant `PREFER_MOST_SPECIALIZED_EVENT=1`
-	has to be set when compiling to enable this new feature.
+	And the sequence <code>\<Double-1\></code> is more specific than <code>\<1\>\<1\></code> because
+	of time and space requirements (in <code>\<Double-1\></code>). Note that constant
+	<code>PREFER_MOST_SPECIALIZED_EVENT=1</code> has to be set when compiling to enable this new feature.
 
-8. Legacy implementation cannot handle homogeneous equal sequences properly, see this script:
+5. Legacy implementation cannot handle homogeneous equal sequences properly, see this script:
 
 		bind . <1><Control-1> { lappend x "first" }
 		bind . <Control-1><1> { lappend x "last" }
@@ -91,7 +91,7 @@ of double-click events has to fit time requirements (due to manual; see test cas
 		event generate . <Control-1>
 		set x
 	
-	Manual (`man bind`) says:
+	Manual (<code>man bind</code>) says:
 
 	> If these tests fail to determine a winner, then the most recently registered
 	> sequence is the winner.
@@ -103,7 +103,7 @@ Legacy code also suffers from causing memory holes, revised implementation is te
 to be memory friendly.
 
 The revised implementation supports an additional syntax for binding motion events
-(if constant `SUPPORT_ADDITIONAL_MOTION_SYNTAX=1` is set when compiling). E.g.,
+(if constant <code>SUPPORT_ADDITIONAL_MOTION_SYNTAX=1</code> is set when compiling). E.g.,
 the following bindings
 
 	bind . <B2-Motion> { ... }  
@@ -111,10 +111,8 @@ the following bindings
 
 can be expressed in a different way:
 
-<code>
-  	bind . \<Motion-2> { ... }  
-  	bind . \<Motion-1-2> { ... }
-</code>
+	bind . <Motion-2> { ... }  
+	bind . <Motion-1-2> { ... }
 
 The additional syntax is easier to remember, because button press/release events will also
 be expressed in the latter form, for example <code>bind . \<ButtonPress-1></code>. The former
@@ -122,33 +120,33 @@ syntax (<code>\<B2-Motion></code>) form will still be supported.
 
 # Specification
 
-The whole handling in file `general/tkBind.c` has been re-implemented. This implementation
-is passing all test cases in `tests/bind.test`. Note that legacy implementation is failing
+The whole handling in file <code>general/tkBind.c</code> has been re-implemented. This implementation
+is passing all test cases in <code>tests/bind.test</code>. Note that legacy implementation is failing
 in some (of the new) test cases.
 
-Case (4): Legacy implementation is computing the time difference of nth click with first click,
+Issue (1): Legacy implementation is computing the time difference of nth click with first click,
 and tests whether it is less than 500 ms. But this seems to be an implementation bug. Revised
 implementation computes the difference of nth and (n+1)th clicks. This behavior also conforms
 better to the behavior of other toolkits. With new implementation the use of quadruple clicks
 (and triple clicks) is unproblematic. See also test case
 [bind-32.6](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6172-6191).
 
-Case (5) is only a minor bug, and there exists a work-around. But the author decided to
+Isue (2) is only a minor bug, and there exists a work-around. But the author decided to
 eliminate this design bug, with revised implementation option **-time** is recognizing new
 special value **current**, and is using the current event time in this case. This extension
 is fully backward compatible. See also test case
 [bind-32.4](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6158-6171).
 
-For the fix of case (6) the author decided that non-zero values (given with option
+For the fix of issue (3) the author decided that non-zero values (given with option
 **-send_event**) will be converted to **1**. This is conform to the manual, see
 `man bind` (search for **Sendevent**), see also lines 3287ff in legacy file
-[generic/tkBind.c](http://core.tcl.tk/tk/artifact/e41f45f7f6ac3447?ln=4178-4203).
+[generic/tkBind.c](http://core.tcl.tk/tk/artifact/e41f45f7f6ac3447?ln=3287-3307).
 
-The fix of (7) is not fully backwards compatible. But in the author's opinion this is not
+The fix of issue (4) is not fully backwards compatible. But in the author's opinion this is not
 a real problem, nobody is using sequences like <code>\<1\>\<1\></code>, it is not expected that
 applications have to be adjusted.
 
-Fix of (8) is correcting a major bug, see test case
+Fix of issue (5) is correcting a major bug, see test case
 [bind-33.13](https://core.tcl-lang.org/tk/artifact/6377cb0d762b7261?ln=6550-6566).
 
 # Implementation
@@ -165,14 +163,14 @@ Based on tests the performance in time is better than with legacy implementation
 result is expected, because a triple-nested loop, executed for each incoming event, has
 been changed to a quasi-double-nested loop (only in very seldom cases it is still
 triple-nested). Furthermore the traversed lists are shorter than with legacy implementation,
-because the event ring, always containing 30 items, has been eliminated. Only unbinding
-a tag is a bit slower than before. Memory consumption did not change significantly.
+because the event ring, always containing 30 items (or even 45 on Mac), has been eliminated.
+Only unbinding a tag is a bit slower than before. Memory consumption did not change significantly.
 
 # Backwards Compatibility
 
-Fix of issue (7) is not fully backwards compatible (more details in section **Rationale**).
+Fix of issue (4) is not fully backwards compatible (more details in section **Rationale**).
 
-Moreover fix of issue (8) is not backwards compatible, but here erroneous behavior has been
+Moreover fix of issue (5) is not backwards compatible, but here erroneous behavior has been
 corrected.
 
 Beside these two exceptions the revised implementation is fully backwards compatible, even
