Update of TIP 532.

--- a/tip/532.md
+++ b/tip/532.md
@@ -81,7 +81,8 @@ of double-click events has to fit time requirements (due to manual; see test cas
 
 	And the sequence <code>\<Double-1\></code> is more specific than <code>\<1\>\<1\></code> because
 	of time and space requirements (in <code>\<Double-1\></code>). Note that constant
-	<code>PREFER_MOST_SPECIALIZED_EVENT=1</code> has to be set when compiling to enable this new feature.
+	<code>PREFER\_MOST\_SPECIALIZED\_EVENT=1</code> has to be set when compiling to enable this
+	new feature.
 
 5. Legacy implementation cannot handle homogeneous equal sequences properly, see this script:
 
@@ -103,7 +104,7 @@ Legacy code also suffers from causing memory holes, revised implementation is te
 to be memory friendly.
 
 The revised implementation supports an additional syntax for binding motion events
-(if constant <code>SUPPORT_ADDITIONAL_MOTION_SYNTAX=1</code> is set when compiling). E.g.,
+(if constant <code>SUPPORT\_ADDITIONAL\_MOTION\_SYNTAX=1</code> is set when compiling). E.g.,
 the following bindings
 
 	bind . <B2-Motion> { ... }  
