Minor fix in #532.

--- a/tip/532.md
+++ b/tip/532.md
@@ -17,7 +17,7 @@ This limitation is causing unexpected behavior. Moreover some issues in event lo
 handling are known.
 
 Increasing the event size of the event ring can solve the problems caused by event
-queue overflow locally, but not in general. Therefore the author decided to re-implement
+ring overflow locally, but not in general. Therefore the author decided to re-implement
 the event processing, the revised implementation is working as if the event ring is
 unlimited. Moreover new implementation is more efficient (in time), and all known
 issues in event handling have been eliminated.
