Update of #532: change in manual of "bind" explained.

--- a/tip/532.md
+++ b/tip/532.md
@@ -177,6 +177,28 @@ corrected.
 Beside these two exceptions the revised implementation is fully backwards compatible, even
 if the additional syntax style for motion bindings is enabled.
 
+If constant <code>PREFER\_MOST\_SPECIALIZED\_EVENT=1</code> is defined (prefer most specific
+binding in term of most high-ordered patterns), then the guidance in manual of **bind**,
+how to choose the most specific binding, has to be changed:
+
+> (a) An event pattern that specifies a specific button or key is more specific than one that
+> does not.
+
+> (b) A sequence with the most highest-ordered patterns (in term of highest
+> repetition count) is more specific than a sequence with less highest-ordered patterns.
+
+> (c) If the modifiers specified in one pattern are a subset of the modifiers in another pattern,
+> then the pattern with more modifiers is more specific.
+
+> (d) A virtual event whose physical pattern matches the sequence is less specific than the
+> same physical pattern that is not associated with a virtual event.
+
+> (e) Given a sequence that matches two or more virtual events, one  of  the  virtual  events
+> will be chosen, but the order is undefined.
+
+Rule (b) has been exchanged, because the old rule (a longer sequence is more specific than
+a shorter sequence) is now obsolete.
+
 # Copyright
 
 This document has been placed in the public domain.
