TIP #533 accepted 5/0/0: YES: 5 (Griffin, Kupries, Landers, Nijtmans, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 2-Feb-2019 to Tcl Core list. Implementation was merged the same day.

--- a/tip/533.md
+++ b/tip/533.md
@@ -1,8 +1,8 @@
 # TIP 533: Extension of the menu post command.
 	Author:         Marc Culler
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           Pending
+	Vote:           Done
 	Created:        13-Jan-2019
 	Post-History:  
 	Keywords:       Tk, menubutton
