Update TIP #532 by giving the branches that will receive the implementation with or without PREFER_MOST_SPECIALIZED_EVENT and SUPPORT_ADDITIONAL_MOTION_SYNTAX

--- a/tip/532.md
+++ b/tip/532.md
@@ -6,8 +6,8 @@
 	Created:        09-Jan-2019
 	Post-History:  
 	Keywords:       Tk, bind, event, event loop
-	Tcl-Version:    8.6
-	Tk-Branch:      bug6e8afe516d
+	Tcl-Version:    8.6 and 8.7
+	Tk-Branch:      bug6e8afe516d, bug6e8afe516d-87
 ----
 
 # Abstract
@@ -166,6 +166,16 @@ been changed to a quasi-double-nested loop (only in very seldom cases it is stil
 triple-nested). Furthermore the traversed lists are shorter than with legacy implementation,
 because the event ring, always containing 30 items (or even 45 on Mac), has been eliminated.
 Only unbinding a tag is a bit slower than before. Memory consumption did not change significantly.
+
+Branch [bug6e8afe516d](https://core.tcl-lang.org/tk/timeline?r=bug6e8afe516d)
+has <code>PREFER\_MOST\_SPECIALIZED\_EVENT=0</code> and
+<code>SUPPORT\_ADDITIONAL\_MOTION\_SYNTAX=0</code>.
+It targets 8.6 and is intended to be merged into core-8-6-branch.
+
+Branch [bug6e8afe516d-87](https://core.tcl-lang.org/tk/timeline?r=bug6e8afe516d-87)
+has <code>PREFER\_MOST\_SPECIALIZED\_EVENT=1</code> and
+<code>SUPPORT\_ADDITIONAL\_MOTION\_SYNTAX=1</code>.
+It targets 8.7 and is intended to be merged into trunk.
 
 # Backwards Compatibility
 
