Update TIP #527 / timerate (the branches and TIP are ready now)

--- a/tip/527.md
+++ b/tip/527.md
@@ -1,6 +1,6 @@
 # TIP 527: New measurement facilities in TCL: New command timerate.
 	Author:         Sergey G. Brester <sebres@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
 	Vote:           Pending
 	Created:        26-Nov-2018
@@ -38,16 +38,17 @@ Although the existing command `time` can be used for performance measurement, it
 
 ### Synopsis
 
-	timerate script ?time? ?count?
+	timerate script ?time ?max-count??
 
-	timerate ?-direct? ?-overhead double? script ?time ?count??
+	timerate ?-direct? ?-overhead double? script ?time ?max-count??
 
-	timerate ?-calibrate? ?-direct? script ?time ?count??
+	timerate ?-calibrate? ?-direct? script ?time ?max-count??
 
 ### Description
 
-The first and second form will evaluate script until the interval time given in milliseconds elapses, or for 1000 milliseconds (1 second) if time is not specified.
-If parameter count is additionally specified (not yet introduced in mentioned tcl-branch, coming soon) it means max count times to evaluate the script, so the evalution will stop after this count of iterations reached.
+The first and second form will evaluate script until the interval `time` given in milliseconds elapses, or for 1000 milliseconds (1 second) if `time` is not specified.
+The parameter `max-count` could additionally impose a further restriction by the maximal number of iterations to evaluate the script.
+If `max-count` is specified, the evalution will stop either this count of iterations is reached or the time is exceeded.
 
 It will then return a canonical tcl-list of the form (similar to command `time` but more expressive):
 
@@ -136,6 +137,9 @@ to compare performamnce among revisions and detect performance regressions.
 ### Synopsis
 
 	::tclTestPerf::_test_run time scripts
+
+*The reason why this command is called `_test_run` was the intention to extend later this functionality with `test` command
+(to provide similar functionality of tcltest-package for performance measurement resp. to melt both packages at some point)*
 
 The `_test_run` command executes a batch of scripts provided in the syntax of a Tcl list, with the exception that rows may be commented using Tcl's `#` syntax.
 It produces an output, that can be used for automated comparison of perfomance measurements.
