TIP 527 mistakenly advanced to FINAL

--- a/tip/527.md
+++ b/tip/527.md
@@ -1,6 +1,6 @@
 # TIP 527: New measurement facilities in TCL: New command timerate.
 	Author:         Sergey G. Brester <sebres@users.sourceforge.net>
-	State:          Final
+	State:          Draft
 	Type:           Project
 	Vote:           Pending
 	Created:        26-Nov-2018
