--- a/tip/532.md
+++ b/tip/532.md
@@ -7,7 +7,7 @@
 	Post-History:  
 	Keywords:       Tk, bind, event, event loop
 	Tcl-Version:    8.6 and 8.7
-	Tk-Branch:      bug6e8afe516d, bug6e8afe516d-87
+	Tk-Branch:      bug6e8afe516d
 ----
 
 # Abstract
