More formatting fixes

--- a/tip/430.md
+++ b/tip/430.md
@@ -55,61 +55,59 @@ contain several commands including:
 
  * **zipfs canonical** _filename_
 
-      > Returns the a string representing where _filename_ would be located
-      > within zipfs.
+    Returns the a string representing where _filename_ would be located
+    within zipfs.
 
  * **zipfs exists** _filename_
 
-      > Returns true if a file exists in zipfs. Unlike _file exists_
-      > this command is safe to run in a safe interp, because it confers
-      > no access to the local file system.
+    Returns true if a file exists in zipfs. Unlike _file exists_
+    this command is safe to run in a safe interp, because it confers
+    no access to the local file system.
 
  * **zipfs mount** ?_archive_? ?_mountpoint_?
 
-     > Mounts the ZIP file _archive_ at the location given by _mountpoint_,
-     > which will default to **zipfs:/_archive_** if absent. With no arguments
-     > this command describes all current mounts, returning a list of pairs.
+    Mounts the ZIP file _archive_ at the location given by _mountpoint_,
+    which will default to **zipfs:/_archive_** if absent. With no arguments
+    this command describes all current mounts, returning a list of pairs.
 
  * **zipfs root**
 
-     > Return the root mount point for Zipfs file systems. On windows this returns **zipfs:/**.
-     > On all other platforms this returns **//zipfs:/**
-
+    Return the root mount point for Zipfs file systems. On windows this returns **zipfs:/**.
+    On all other platforms this returns **//zipfs:/**
 
  * **zipfs tcl_library**
 
-     > Search the current executable, the tcl dynamic library, and the local file system
-     > for a zipfs file system containing Tcl's init.tcl file. Returns null if none was found.
+    Search the current executable, the tcl dynamic library, and the local file system
+    for a zipfs file system containing Tcl's init.tcl file. Returns null if none was found.
 
  * **zipfs unmount** _archive_
 
-     > Unmounts the ZIP file _archive_, which must have been previously mounted.
+    Unmounts the ZIP file _archive_, which must have been previously mounted.
 
 Outside of a save interpreter, the following additional commands will be available:
 
  * **zipfs lmkimg** _outfile_ _inlist_ ?strip? ?_password_? ?infile?
 
-     > Generate a zip archive (_outfile_) from a list of files (_inlist_),
-     > as a self extracting executable appended to a bare executable (_infile_).
-     >
-     > If _strip_ is given, that string will be removed from the front of all files
-     > before generating their names within the archive.
-     >
-     > If _password_ is given, the file will be encrypted with that passphrase
+    Generate a zip archive (_outfile_) from a list of files (_inlist_),
+    as a self extracting executable appended to a bare executable (_infile_).
+
+    If _strip_ is given, that string will be removed from the front of all files
+    before generating their names within the archive.
+
+    If _password_ is given, the file will be encrypted with that passphrase
 
  * **zipfs lmkzip** _outfile_ _inlist_ ?strip? ?_password_?
 
-     > Generate a zip archive (_outfile_) from a list of files (_inlist_).
+    Generate a zip archive (_outfile_) from a list of files (_inlist_).
 
  * **zipfs mkzip** _outfile_ _indir_ ?strip? ?_password_?
 
-     > Generate a zip archive (_outfile_) from the contents of a directory (_indir_)
+    Generate a zip archive (_outfile_) from the contents of a directory (_indir_)
 
  * **zipfs mkimg** _outfile_ _indir_ ?strip? ?_password_? ?infile?
 
-     > Generate a zip archive (_outfile_) from the contents of a directory (_indir_),
-     > as a self extracting executable appended to a bare executable (_infile_).
-
+    Generate a zip archive (_outfile_) from the contents of a directory (_indir_),
+    as a self extracting executable appended to a bare executable (_infile_).
 
 ## VFS Mount Point
 
@@ -141,27 +139,27 @@ mounted as **ZIPFS\_ROOT**_/app_. If **ZIPFS\_ROOT**_/app/main.tcl_ exists, that
 set the shell's startup script. If **ZIPFS\_ROOT**_/app/tcl\_library/_ exists, it will be
 searched for init.tcl.
 
-The way to produce an executable will be as follows (Assuming the source for the application
-is at ~/myapp/src:
+The way to produce an executable will be as follows (assuming the source for the application
+is at `~/myapp/src`):
 
 From Tcl:
 
-    > zipfs mkimg ~/bin/myapp.exe ~/myapp/src ~/myapp/src ~/bin/tclsh87.exe
+    zipfs mkimg ~/bin/myapp.exe ~/myapp/src ~/myapp/src ~/bin/tclsh87.exe
 
 From Unix:
 
-    > cd ~/myapp/src
-    > zip -r ~/myapp.zip .
-    > cd ..
-    > cp ~/bin/tclsh87.exe myapp.exe
-    > cat myapp.zip >> myapp.exe
+    cd ~/myapp/src
+    zip -r ~/myapp.zip .
+    cd ..
+    cp ~/bin/tclsh87.exe myapp.exe
+    cat myapp.zip >> myapp.exe
 
 ## First argument handling for Tclsh/Wish
 
 If the first argument to Tclsh or Wish is detected to be a zipfile, that file will be
-mounted as **ZIPFS\_ROOT*_/app_. If **ZIPFS\_ROOT**_/app/main.tcl_ exists, that file is marked
+mounted as **ZIPFS\_ROOT**_/app_. If **ZIPFS\_ROOT**_/app/main.tcl_ exists, that file is marked
 set the shell's startup script. If **ZIPFS\_ROOT**_/app/tcl\_library_ exists, it will be
-searched for init.tcl.
+searched for _init.tcl_.
 
 ## New Tclsh features for TEA
 
@@ -170,45 +168,45 @@ _install_ is the first argument, set subsequent arguments are passed to a new fi
 in library **install.tcl**.
 
 **tclsh install** with no arguments is designed to return immediately with a normal return code,
-thus making it easy to test if a tclsh is tip430 Savvy but running in autoconf:
+thus making it easy to test if a tclsh is tip430 savvy but running in autoconf:
 
-    > AS_IF([$TCLSH_PROG install],[
-    >  ZIP_PROG=${TCLSH_PROG}
-    >  ZIP_PROG_OPTIONS="install mkzip"
-    >  ZIP_PROG_VFSSEARCH="."
-    >  AC_MSG_RESULT([Can use Native Tclsh for Zip encoding])
-    > ])
+    AS_IF([$TCLSH_PROG install],[
+        ZIP_PROG=${TCLSH_PROG}
+        ZIP_PROG_OPTIONS="install mkzip"
+        ZIP_PROG_VFSSEARCH="."
+        AC_MSG_RESULT([Can use Native Tclsh for Zip encoding])
+    ])
 
 This tip only defines 2 function for install:
 
- * **tclsh install mkzip**.
+ * **tclsh install mkzip** ...
 
-    > This command is a passthrough to the **zipfs mkzip** command, and allows
-    > tclsh to operate as zip encoder from make.
+    This command is a passthrough to the **zipfs mkzip** command, and allows
+    tclsh to operate as zip encoder from make.
 
- * **tclsh install mkimg**.
+ * **tclsh install mkimg** ....
 
-    > This command is a passthrough to the **zipfs mkimg** command, and allows
-    > tclsh to operate as zip encoder from make.
+    This command is a passthrough to the **zipfs mkimg** command, and allows
+    tclsh to operate as zip encoder from make.
 
- * **tclsh install copyDir** _source_ _destination_
+ * **tclsh install copyDir** _source destination_
 
-    > This command will recursively copy the file structure of _source_
-    > to _destination_
+    This command will recursively copy the file structure of _source_
+    to _destination_
 
- * **tclsh install installDir** _source_ _destination_
+ * **tclsh install installDir** _source destination_
 
-    > This command will recursively copy the file structure of _source_
-    > to _destination_, deleting _destination_ if it already exists, and
+    This command will recursively copy the file structure of _source_
+    to _destination_, deleting _destination_ if it already exists, and
     > marking all files copies as read-only.
 
  * **tclsh install pkgindex_path** _path_ ?_path_...?
 
-    > Index all of the paths specified and generate a script that can
-    > be sourced to feed all of the __package ifneeded__ statements
-    > to an interpreter in one shot. Useful for indexing VFS file systems
-    >
-    > example:
+    Index all of the paths specified and generate a script that can
+    be sourced to feed all of the __package ifneeded__ statements
+    to an interpreter in one shot. Useful for indexing VFS file systems
+
+    example:
 
         tclsh install copyDir ~/myapp/src myapp.vfs
         tclsh install pkgindex_path myapp.vfs > myapp.vfs/pkgIndex.tcl
@@ -227,7 +225,7 @@ The concept has been modernized, somewhat, as well as heavily influenced by impr
 made to it through the FreeWrap and Androwish projects. That implementation consists of one C file
 \(_tclZipvfs.c_\).  I have also prepared a set of kit-like behaviors for the
 core to express when tclAppInit.c is not compiled with a **TCL\_LOCAL\_MAIN\_HOOK**
-defined. Those behaviors reside in the *TclZipfs_AppHook\(\)* function.
+defined. Those behaviors reside in the **TclZipfs_AppHook**\(\) function.
 
 This work is checked in as the "_core\_zip\_vfs_" branch on both Tcl and Tk.
 
@@ -313,30 +311,28 @@ will make a call to *TclZipfs_AppHook\(\)* if no **TK\_LOCAL\_MAIN\_HOOK** was d
 
 # C API
 
-* **int TclZipfs_AppHook\(int \*argc, char \*\*\*argv\);**
+int **TclZipfs\_AppHook**\(int _\*argc,_ char _\*\*\*argv_\);
 
 1. If the current executable has an attached zip file system, mount that to **ZIPFS\_ROOT**/app.
 2. If the file **ZIPFS\_ROOT**_/app/main.tcl_ exists, register that file as the process startup script.
 3. If the file **ZIPFS\_ROOT**_/app/tcl\_library/init.tcl_ exists, register **ZIPFS\_ROOT**_/app/tcl\_library/init.tcl_ as **tcl\_library**
 4. If the file **ZIPFS\_ROOT**_/app/tk\_library/init.tcl_ exists, register **ZIPFS\_ROOT**_/app/tk\_library/init.tcl* as **tk\_library**
-5. If **tcl\_library** was not set, the function will then scan the local environment for a
-zipfs file system attached to either the tcl dynamic library or an archive named
-*libtcl\_MAJOR\_MINOR\_PATCHLEVEL.zip*. That file can either be in the present working directory
-or in the standard system install location for Tcl.
+5. If **tcl\_library** was not set, the function will then scan the local environment for a zipfs file system attached to either the tcl dynamic library or an archive named `libtcl\_MAJOR\_MINOR\_PATCHLEVEL.zip` (where `MAJOR`, `MINOR` and `PATCHLEVEL` depend on the exact version of Tcl). That file can either be in the present working directory or in the standard system install location for Tcl.
 
-* **int TclZipfs_Mount\(Tcl\_Interp \*interp, const char \*zipname, const char \*mntpt, const char \*passwd\);**
+int **TclZipfs\_Mount**\(Tcl\_Interp _\*interp,_ const char _\*zipname,_ const char _\*mntpt,_ const char _\*passwd_\);
 
-    > Mounts a zip file _zipname_ to the mount point _mntpt_. If _passwd_ is
-    > non-null, that string is used as the password to decrypt the contents.
-    > _mntpnt_ will always be relative to **zipfs:**
+ > Mounts a zip file _zipname_ to the mount point _mntpt_. If _passwd_ is
+ > non-null, that string is used as the password to decrypt the contents.
+ > _mntpnt_ will always be relative to **zipfs:**
 
-* **int TclZipfs_Unmount\(Tcl\_Interp \*interp, const char \*zipname\);**
+int **TclZipfs\_Unmount**\(Tcl\_Interp _\*interp,_ const char _\*zipname_\);
 
-    > Unmount the file system created by a prior call to **TclZipfs_Mount\(\)**
+ > Unmount the file system created (from _zipname_) by a prior call to
+ > **TclZipfs_Mount**\(\).
 
 # Creating a wrapped executable
 
-With this tip, producing a wrapped executable is now a matter of:
+With this TIP, producing a wrapped executable is now a matter of:
 
     mkdir myvfs.vfs
     cd myvfs.vfs
@@ -351,4 +347,3 @@ With this tip, producing a wrapped executable is now a matter of:
 # Copyright
 
 This document has been placed in the public domain.
-
