CFV for 527 by KBK

--- a/tip/527.md
+++ b/tip/527.md
@@ -2,9 +2,9 @@
 	Author:         Sergey G. Brester <sebres@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        26-Nov-2018
-	Tcl-Version:    8.5
+	Tcl-Version:    8.7
 	Tcl-Branch:     sebres-8-6-timerate
 	Discussions-To: news:comp.lang.tcl
 	Post-History: 
@@ -15,7 +15,7 @@
 This TIP proposes a new command `timerate` as well as a measurement toolchain for TCL.
 
 In order for it to be possibile to compare results among older Tcl versions, the version 8.5 is suggested as a target version for this TIP.
-(To forestall the objection that this TIP extends old versions, the command `timerate` shall be placed into `::tcl::unsupported ` namespace in versions prior to 8.7.)
+(To forestall the objection that this TIP extends old versions, the command `timerate` shall be placed into `::tcl::unsupported ` namespace in versions prior to 8.7; this makes the TIP be formally for 8.7.)
 
 Additionally, this TIP proposes-optionally-a small framework to test performance. This makes possible to create test scripts for
 possible performance regressions and allows a `diff`-based comparison of the results to find performance degradation between revisions.
