--- a/tip/527.md
+++ b/tip/527.md
@@ -1,13 +1,16 @@
 # TIP 527: New measurement facilities in TCL: New command timerate.
 	Author:         Sergey G. Brester <sebres@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        26-Nov-2018
 	Tcl-Version:    8.7
 	Tcl-Branch:     sebres-8-6-timerate
 	Discussions-To: news:comp.lang.tcl
 	Post-History: 
+	Vote-Results:	5/0 accepted
+	Votes-For:		KBK, DKF, AK, SL, FV
+	Votes-Against:	None
 -----
 
 ## Abstract
