--- a/tip/527.md
+++ b/tip/527.md
@@ -1,6 +1,6 @@
 # TIP 527: New measurement facilities in TCL: New command timerate.
 	Author:         Sergey G. Brester <sebres@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        26-Nov-2018
@@ -9,7 +9,7 @@
 	Discussions-To: news:comp.lang.tcl
 	Post-History: 
 	Vote-Results:	5/0 accepted
-	Votes-For:		KBK, DKF, AK, SL, FV
+	Votes-For:	KBK, DKF, AK, SL, FV
 	Votes-Against:	None
 -----
 
