TIP 164 now has an implementation

--- a/tip/164.md
+++ b/tip/164.md
@@ -9,6 +9,7 @@
 	Post-History:   
 	Keywords:       Tk,canvas
 	Tcl-Version:    8.7
+	Tk-Branch:      tip-164
 -----
 
 # Abstract
@@ -62,7 +63,7 @@ Note that most of the arguments are very similar to the canvas's **scale** subco
 
 # Reference Implementation
 
-A reference implementation does _not_ yet exist.
+See the `tip-164` branch.
 
 # Future Work
 
