Make links work in TIP 535

--- a/tip/535.md
+++ b/tip/535.md
@@ -18,7 +18,7 @@ This TIP proposes to remove excess zeroes at the trail of values displaying the 
 
 In some configuration of the display options of scale widgets, it is possible that one or more trailing zeroes be displayed for tick marks. These zeroes are believed to be useless and should be removed.
 
-This is basically a [bugfix]. (https://core.tcl-lang.org/tk/tktview/c9887a1fc9bbf2712f1f8eed6bf57178521722b8)
+This is basically a [bugfix](https://core.tcl-lang.org/tk/tktview/c9887a1fc9bbf2712f1f8eed6bf57178521722b8).
 
 Nevertheless, since we have a strong tradition of trying very hard to not break any user application in the wild, and while the change is viewed only as a fix (it's just about removing useless trailing zeroes), the present TIP is raised to check the community point of view before merging the fix in the development branches.
 
@@ -32,7 +32,7 @@ ttk:scale widgets are not concerned by the change (since they do not display tic
 
 # Implementation
 
-See the [scale-tick-format] (https://core.tcl-lang.org/tk/timeline?r=scale-tick-format&unhide) branch.
+See the [`scale-tick-format`](https://core.tcl-lang.org/tk/timeline?r=scale-tick-format&unhide) branch.
 
 # Copyright
 
